content/v1.3.0/zh/api/core-extra/AgentSaveData.md
---
title: "AgentSaveData"
description: "AgentSaveData 的自动生成类参考。"
---
# AgentSaveData

**Namespace:** TaleWorlds.Core
**Module:** TaleWorlds.Core
**Type:** `public struct AgentSaveData`
**Base:** 无
**File:** `TaleWorlds.Core/AgentSaveData.cs`

## 概述

`AgentSaveData` 更像一个数据载体：它封装一组字段，让系统之间以结构化方式交换状态。

## 心智模型

把 `AgentSaveData` 当作一个 Data 型扩展点来理解：先确认谁创建它、谁持有它、谁调用它，再决定是继承、组合还是只读使用。

## 主要方法

### UpdateSpawnFrame
`public void UpdateSpawnFrame(MatrixFrame spawnFrame)`

**用途 / Purpose:** 重新计算并更新 「spawn frame」 的最新表示。

```csharp
// 先通过子系统 API 拿到 AgentSaveData 实例
AgentSaveData agentSaveData = ...;
agentSaveData.UpdateSpawnFrame(spawnFrame);
```

### AutoGeneratedStaticCollectObjectsAgentSaveData
`public static void AutoGeneratedStaticCollectObjectsAgentSaveData(object o, List<object> collectedObjects)`

**用途 / Purpose:** 获取或维护 「auto generated static collect objects agent save data」 数据。

```csharp
// 静态调用，不需要实例
AgentSaveData.AutoGeneratedStaticCollectObjectsAgentSaveData(o, collectedObjects);
```

## 使用示例

```csharp
// 该数据对象通常由战役/任务 API 返回
AgentSaveData entry = ...;
```

## 参见

- [本区域目录](../)